cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)

add_subdirectory(libksysguard)
add_subdirectory(systemsettings)
add_subdirectory(plasma-workspace)
add_subdirectory(plasma-desktop)
add_subdirectory(oxygen)
add_subdirectory(kwin)
add_subdirectory(powerdevil)
add_subdirectory(ksysguard)
add_subdirectory(kmenuedit)
add_subdirectory(kinfocenter)
add_subdirectory(khotkeys)
add_subdirectory(kwrited)